dark mode, minor changes to the border and shadow

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <title>Simple Counter App</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 flex justify-center items-center h-screen">
-  <div class="big-white p-6 rounded shadow-md text-center w-72">
-    <h1 class="text-2xl font-bold mb-4">Simple Counter App</h1>
-    <p id="counter" class="text-xl font-semibold mb-4">0</p>
+<body class="bg-gray-800 flex justify-center items-center h-screen">
+  <div class="big-white p-6 rounded shadow-md shadow-white border border-white text-center w-72">
+    <h1 class="text-2xl text-white font-bold mb-4">Simple Counter App</h1>
+    <p id="counter" class="text-5xl text-white font-semibold mb-4">0</p>
     <div class="flex justify-around">
       <button id="decrement" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">-</button>
       <button id="increment" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">+</button>
